--- a/resources/styles/session.css
+++ b/resources/styles/session.css
@@ -1,5 +1,5 @@
 .session_info {
-    border: 1px solid #cccccc;
+    border: 1px solid rgb(200, 200, 200);;
     background: white;
     padding: 20px;
     display: flex;
@@ -24,26 +24,17 @@
     margin-bottom: 0;
 }
 
-.group_item > div {
-    padding: 20px;
-    cursor: pointer;
-    height: calc(100% - 40px);
-}
-.group_item > div > :first-child {
-    font-weight: bold;
-}
-
-.group_item_data {
+.node_data {
     position: absolute;
     bottom: 14px;
     right: 20px;
 }
-.group_item_data > div {
+.node_data > div {
     display: inline-block;
     margin-left: 10px;
     text-align: center;
 }
-.group_item_data > div > :first-child {
+.node_data > div > :first-child {
     font-weight: bold;
     font-size: 12px;
 }
