--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -4,3 +4,59 @@
     right: 20px;
     line-height: 10px;
 }
+
+.overlay_shade {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(240, 240, 240, 0.5);
+}
+.overlay {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: calc(100% - 24px);
+    max-width: 900px;
+    background: white;
+    border: 2px solid rgb(200, 200, 200);
+}
+
+.overlay_header {
+    height: 40px;
+}
+.overlay_header > span {
+    font-weight: bold;
+    margin-left: 20px;
+    line-height: 42px;
+}
+.overlay_header > div {
+    width: 20px;
+    float: right;
+    height: 100%;
+}
+.overlay_header > div > i {
+    margin-top: 8px;
+    margin-left: -1px;
+}
+
+.overlay_content {
+    padding: 20px;
+    border-bottom: 2px solid rgb(200, 200, 200);
+    border-top: 2px solid rgb(200, 200, 200);
+}
+
+.overlay_footer {
+    float: right;
+    margin: 10px;
+}
+.overlay_footer > :first-child {
+    float: left;
+    margin-right: 10px;
+    width: 100px;
+}
+.overlay_footer > :last-child {
+    float: right;
+}
