--- a/resources/styles/grouping.css
+++ b/resources/styles/grouping.css
@@ -1,36 +1,56 @@
-.group_header {
-    margin-top: 30px;
+.titled-group-header {
     margin-bottom: 10px;
     height: 42px;
     position: relative;
 }
-.group_title {
+.titled-group-header > h2 {
     margin: 0;
     margin-left: 20px;
     font-size: 22px;
     position: absolute;
     line-height: 32px;
 }
-.group_button {
+.titled-group-header > button {
     float: right;
 }
-.group_separator {
+.titled-group-separator {
     border: 1px solid rgb(200, 200, 200);;
     width: calc(100% - 2px);
     position: absolute;
     bottom: 0;
 }
 
-.group_content {
+.info-group {
+    border: 1px solid rgb(200, 200, 200);
+    background: white;
+    padding: 20px;
+    display: flex;
+}
+.info-group-left {
+    flex-grow: 1;
+    margin-right: 20px;
+    text-align: justify;
+}
+.info-group-left > :first-child {
+    font-weight: bold;
+}
+.info-group-right {
+    flex: 0 0 200px;
+}
+.info-group-right > button {
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.items-block {
     display: flex;
     flex-wrap: wrap;
     margin: -10px;
 }
-.group_content > div {
+.items-block > .status-message {
     margin: 10px;
 }
-
-.group_item {
+.item {
     height: 140px;
     border: 1px solid rgb(200, 200, 200);
     width: calc(50% - 22px);
@@ -38,39 +58,73 @@
     position: relative;
     font-size: 15px;
     margin: 10px;
+    min-width: 0;
 }
-.group_item > a {
+.item-thin {
+    height: 110px;
+}
+.item > a {
     display: inline-block;
     width: calc(100% - 40px);
     height: calc(100% - 40px);
     margin: 0;
     padding: 20px;
 }
-.group_item > a:hover > :first-child {
+.item > a:hover > :first-child {
     text-decoration: underline;
 }
-.group_item > a:focus {
+.item > a:focus {
     outline: none;
 }
-.group_item > a > :first-child {
+.item > a > :first-child {
     font-weight: bold;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
+}
+.item > a > :nth-child(3) {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
-.message_item {
-    width: 100%;
-    height: 40px;
+.item-graph {
+    margin: 0;
+    width: calc(100% - 22px);
+    padding: 10px;
+    height: unset;
+}
+
+.status-message {
+    width: calc(100% - 2px);
+    height: 38px;
     border: 1px solid rgb(200, 200, 200);
     background: white;
     text-align: center;
 }
-.message_item > span {
+.status-message > span {
     font-style: italic;
     font-size: 14px;
-    line-height: 42px;
+    line-height: 40px;
 }
 
 @media screen and (max-width: 650px) {
-    .group_item {
+    .item {
         width: 100%;
+    }
+    .item-graph {
+        width: unset;
+    }
+
+    .info-group {
+        display: block;
+    }
+    .info-group-left {
+        margin-right: 0;
+        margin-bottom: 20px;
     }
 }
