--- a/resources/styles/grouping.css
+++ b/resources/styles/grouping.css
@@ -29,10 +29,12 @@
 .info-group-left {
     flex-grow: 1;
     margin-right: 20px;
-    text-align: justify;
 }
 .info-group-left > :first-child {
     font-weight: bold;
+}
+.info-group-left > :first-child > :first-child {
+    text-decoration: underline;
 }
 .info-group-right {
     flex: 0 0 200px;
