--- a/resources/styles/modal.css
+++ b/resources/styles/modal.css
@@ -1,5 +1,5 @@
 .modal-shade {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
@@ -7,7 +7,7 @@
     background: rgba(240, 240, 240, 0.5);
 }
 .modal {
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -15,6 +15,7 @@
     max-width: 936px;
     background: white;
     border: 2px solid rgb(200, 200, 200);
+    max-height: calc(100% - 60px);
 }
 
 .modal-header {
