--- a/resources/styles/modal.css
+++ b/resources/styles/modal.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background: rgba(240, 240, 240, 0.5);
+    z-index: 2;
 }
 .modal {
     position: fixed;
@@ -16,6 +17,7 @@
     background: white;
     border: 2px solid rgb(200, 200, 200);
     max-height: calc(100% - 60px);
+    z-index: 3;
 }
 
 .modal-header {
