--- a/resources/styles/globals.css
+++ b/resources/styles/globals.css
@@ -42,10 +42,11 @@ h1 {
     border: 2px solid rgb(200, 200, 200);
     border-top: unset;
     position: absolute;
-    right: 30px;
+    right: 0;
     z-index: 1;
     padding: 10px;
     display: none;
+    top: 37px;
 }
 .account-menu > button {
     width: 100%;
