--- a/resources/styles/globals.css
+++ b/resources/styles/globals.css
@@ -45,16 +45,19 @@ h1 {
     right: 0;
     z-index: 1;
     padding: 10px;
+    padding-top: 0;
     display: none;
     top: 37px;
 }
 .account-menu > button {
     width: 100%;
+    margin-top: 10px;
 }
 .account-menu > p {
     font-size: 13px;
     text-align: justify;
     margin-bottom: 0;
+    margin-top: 10px;
 }
 
 main {
