--- a/resources/styles/pages/login.css
+++ b/resources/styles/pages/login.css
@@ -2,7 +2,11 @@ main {
     width: 250px;
     margin: 0 auto;
 }
-main > button {
+form > button {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+input {
+    margin-bottom: 5px;
 }
