--- a/resources/styles/external/bootstrap.css
+++ b/resources/styles/external/bootstrap.css
@@ -1,3 +1,33 @@
+/*
+    The MIT License (MIT)
+
+    Copyright (c) 2011-2020 Twitter, Inc.
+    Copyright (c) 2011-2020 The Bootstrap Authors
+
+    Permission is hereby granted, free of charge, to any person obtaining a copy
+    of this software and associated documentation files (the "Software"), to deal
+    in the Software without restriction, including without limitation the rights
+    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+    copies of the Software, and to permit persons to whom the Software is
+    furnished to do so, subject to the following conditions:
+
+    The above copyright notice and this permission notice shall be included in
+    all copies or substantial portions of the Software.
+
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+    THE SOFTWARE.
+*/
+
+/*
+    Part of the source code from the Bootstrap framework. Included to produce
+    a consistent base style for all form input elements.
+*/
+
 .form-control {
     display: block;
     width: 100%;
@@ -17,58 +47,58 @@
 .form-control::-ms-expand {
     background-color: transparent;
     border: 0;
-  }
-  
-  .form-control:-moz-focusring {
+}
+
+.form-control:-moz-focusring {
     color: transparent;
     text-shadow: 0 0 0 #495057;
-  }
-  
-  .form-control:focus {
+}
+
+.form-control:focus {
     color: #495057;
     background-color: #fff;
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  }
-  
-  .form-control::-webkit-input-placeholder {
+}
+
+.form-control::-webkit-input-placeholder {
     color: #6c757d;
     opacity: 1;
-  }
-  
-  .form-control::-moz-placeholder {
+}
+
+.form-control::-moz-placeholder {
     color: #6c757d;
     opacity: 1;
-  }
-  
-  .form-control:-ms-input-placeholder {
+}
+
+.form-control:-ms-input-placeholder {
     color: #6c757d;
     opacity: 1;
-  }
-  
-  .form-control::-ms-input-placeholder {
+}
+
+.form-control::-ms-input-placeholder {
     color: #6c757d;
     opacity: 1;
-  }
-  
-  .form-control::placeholder {
+}
+
+.form-control::placeholder {
     color: #6c757d;
     opacity: 1;
-  }
-  
-  .form-control:disabled, .form-control[readonly] {
+}
+
+.form-control:disabled, .form-control[readonly] {
     background-color: #e9ecef;
     opacity: 1;
-  }
-  
-  select.form-control:focus::-ms-value {
+}
+
+select.form-control:focus::-ms-value {
     color: #495057;
     background-color: #fff;
-  }
-  
-  .form-control-file,
-  .form-control-range {
+}
+
+.form-control-file,
+.form-control-range {
     display: block;
     width: 100%;
-  }
+}
