--- a/resources/styles/grouping.css
+++ b/resources/styles/grouping.css
@@ -9,6 +9,7 @@
     font-size: 22px;
     position: absolute;
     line-height: 32px;
+    font-weight: bold;
 }
 .titled-group-header > button {
     float: right;
