--- a/resources/styles/modal.css
+++ b/resources/styles/modal.css
@@ -6,6 +6,7 @@
     height: 100%;
     background: rgba(240, 240, 240, 0.5);
     z-index: 2;
+    display: none;
 }
 .modal {
     position: fixed;
@@ -18,23 +19,19 @@
     border: 2px solid rgb(200, 200, 200);
     max-height: calc(100% - 60px);
     z-index: 3;
+    display: none;
 }
 
 .modal-header {
     height: 40px;
+    text-align: center;
 }
-.modal-header > span {
+.modal-header span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     font-weight: bold;
-    margin-left: 20px;
     line-height: 42px;
-}
-.modal-header > button {
-    width: 40px;
-    float: right;
-    height: 100%;
-}
-.modal-header > button > i {
-    margin-left: -1px;
 }
 
 .modal-content {
@@ -44,15 +41,24 @@
 }
 
 .modal-footer {
-    float: right;
     margin: 10px;
+    margin-left: 20px;
     margin-right: 20px;
+    display: flex;
+    justify-content: space-between;
 }
-.modal-footer > :first-child {
-    float: left;
+.modal-status {
+    font-size: 14px;
     margin-right: 10px;
-    width: 130px;
+    margin-top: 6px;
+    color: rgb(195, 39, 40);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
-.modal-footer > :last-child {
-    float: right;
+.modal-buttons {
+    min-width: 171px;
+}
+.modal-buttons > :first-child {
+    width: 100px;
 }
