--- a/resources/styles/globals.css
+++ b/resources/styles/globals.css
@@ -17,11 +17,6 @@ main {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-main > :last-child {
-    margin-bottom: 0;
-    margin-top: 20px;
-}
-
 a {
     text-decoration: none;
     color: inherit;
@@ -51,28 +46,34 @@ button:disabled {
 form {
     margin: 0;
 }
-.form-control {
-    border-radius: 0 !important;
-    background: rgb(200, 200, 200) !important;
-    border: 0 !important;
-    color: inherit !important;
-    font-size: 14px !important;
-}
-input {
+
+form input,
+form select,
+form textarea {
+    display: block;
     width: 100%;
-    padding: 8px !important;
-    height: 30px !important;
+    height: 30px;
+    padding: 8px;
+    font-family: inherit;
+    font-size: 14px;
+    color: inherit;
+    background-color: rgb(200, 200, 200);
+    border: 0;
+    border-radius: 0;
 }
-textarea {
-    width: 100%;
-    padding: 8px !important;
+form input:focus,
+form select:focus,
+form textarea:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+form textarea {
     height: 60px !important;
 }
-select {
+form select {
     padding: 5px !important;
-    height: 30px !important;
 }
-
-.last-item {
-    margin-bottom: 0 !important;
+form input[type=text] {
+    padding-top: 9px;
 }
