--- a/resources/styles/header.css
+++ b/resources/styles/header.css
@@ -1,37 +1,34 @@
-header {
+.header {
     margin-bottom: 20px;
 }
-header > :first-child {
+.header__first-row {
     background-color: rgb(200, 200, 200);
 }
-h1 {
+.header__title {
     font-size: 20px;
     margin: 0;
     display: inline-block;
     line-height: 50px;
     font-weight: bold;
 }
-.user
-{
+
+.user {
     float: right;
     position: relative;
     top: 13px;
 }
-.user > i
-{
+.user__open-menu {
     float: left;
     margin-right: 5px;
     cursor: pointer;
     user-select: none;
 }
-.user > span
-{
+.user__name {
     float: right;
     position: relative;
     top: 5px;
 }
-
-.user-menu {
+.user__menu {
     width: 200px;
     background-color: white;
     border: 2px solid rgb(200, 200, 200);
@@ -41,21 +38,23 @@ h1 {
     z-index: 1;
     padding: 10px;
     padding-top: 0;
-    display: none;
     top: 37px;
 }
-.user-menu > button {
+.user__menu--hidden {
+    display: none;
+}
+.user__log-out {
     width: 100%;
     margin-top: 10px;
 }
-.user-menu > p {
+.user__attribution {
     font-size: 13px;
     text-align: justify;
     margin-bottom: 0;
     margin-top: 10px;
 }
 
-.special-actions {
+.actions {
     text-align: center;
     background-color: rgb(200, 200, 200);
     padding: 10px;
@@ -63,6 +62,6 @@ h1 {
     margin-top: 20px;
     line-height: 20px;
 }
-.special-actions a {
+.actions__anchor {
     text-decoration: underline;
 }
