--- a/resources/styles/modal.css
+++ b/resources/styles/modal.css
@@ -1,4 +1,4 @@
-.modal-shade {
+.modal__shade {
     position: fixed;
     left: 0;
     top: 0;
@@ -6,6 +6,8 @@
     height: 100%;
     background: rgba(240, 240, 240, 0.5);
     z-index: 2;
+}
+.modal__shade--hidden {
     display: none;
 }
 .modal {
@@ -13,52 +15,63 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: calc(100% - 64px);
-    max-width: 936px;
+    width: calc(100% - 44px);
     background: white;
     border: 2px solid rgb(200, 200, 200);
     max-height: calc(100% - 60px);
     z-index: 3;
+    max-width: 550px;
+    min-width: 406px;
+}
+.modal--hidden {
     display: none;
 }
 
-.modal-header {
+.modal__header {
     height: 40px;
     text-align: center;
 }
-.modal-header span {
+.modal__title {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     font-weight: bold;
     line-height: 42px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.modal-content {
+.modal__content {
     padding: 20px;
     border-bottom: 2px solid rgb(200, 200, 200);
     border-top: 2px solid rgb(200, 200, 200);
 }
+.modal__field-title {
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+}
 
-.modal-footer {
+.modal__footer {
     margin: 10px;
     margin-left: 20px;
     margin-right: 20px;
     display: flex;
     justify-content: space-between;
 }
-.modal-status {
+.modal__status {
     font-size: 14px;
     margin-right: 10px;
-    margin-top: 6px;
+    margin-top: 8px;
     color: rgb(195, 39, 40);
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.modal-buttons {
+.modal__buttons {
     min-width: 171px;
 }
-.modal-buttons > :first-child {
+.modal__submit {
     width: 100px;
 }
