Committed all outstanding changes. Added network overview page. Node page working. Upgrades to Login, index and project pages

--- a/resources/styles/grouping.css
+++ b/resources/styles/grouping.css
@@ -118,12 +118,13 @@
     font-size: 15px;
 }
 
-.item-graph {
-    margin: 0;
+/* .item-graph { */
+    /* margin: 0;
     width: calc(100% - 22px);
     padding: 10px;
-    height: unset;
-}
+    height: unset; */
+    /* height: 350px; */
+/* } */
 
 .status-message {
     width: calc(100% - 2px);
