Major paradigm change. Now using Slim and Twig frameworks. API no longer standalone. Not done

--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -62,6 +62,16 @@
     margin-top: 20px;
     line-height: 20px;
 }
+.actions__item {
+    display: inline;
+}
+.actions__item::after {
+    content: " •";
+    font-weight: bold;
+}
+.actions__item:last-child::after {
+    content: none;
+}
 .actions__anchor {
     text-decoration: underline;
 }
