--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -21,6 +21,9 @@ a {
     text-decoration: none;
     color: inherit;
 }
+i {
+    font-style: italic;
+}
 
 button {
     background-color: rgb(200, 200, 200);
