--- a/assets/views/pages/projects.twig
+++ b/assets/views/pages/projects.twig
@@ -15,11 +15,9 @@
         <link href="{{ assets }}/css/header.css" rel="stylesheet">
         <script src="{{ assets }}/js/header.js"></script>
         <link href="{{ assets }}/css/grouping.css" rel="stylesheet">
-        <script src="{{ assets }}/js/pages/projects.js"></script>
-
         <link href="{{ assets }}/css/modal.css" rel="stylesheet">
-        <link href="{{ assets }}/css/modals/new-project.css" rel="stylesheet">
-        <script src="{{ assets }}/js/modals/new-project.js"></script>
+        <link href="{{ assets }}/css/pages/projects.css" rel="stylesheet">
+        <script src="{{ assets }}/js/pages/projects.js"></script>
     </head>
 
     <body>
@@ -78,7 +76,33 @@
             </div>
         </main>
 
+
         <div class="modal__shade modal__shade--hidden" id="modal-shade"></div>
-        {% include "partials/modals/newProject.twig" %}
+        
+        <!-- New project modal -->
+        <div class="modal modal--hidden" id="newproj-modal">
+            <div class="modal__header">
+                <p class="modal__title">Create a New Project</p>
+            </div>
+
+            <div class="modal__content">
+                <form id="m-newproj-form">
+                    <p class="modal__field-title">Name</p>
+                    <input class="m-newproj-name" id="m-newproj-name" type="text" maxlength="128"/>
+
+                    <p class="modal__field-title">Description</p>
+                    <textarea class="m-newproj-desc" id="m-newproj-desc" maxlength="255"></textarea>
+                </form>
+            </div>
+
+            <div class="modal__footer">
+                <p class="modal__status" id="m-newproj-status"></p>
+
+                <div class="modal__buttons">
+                    <button class="modal__submit" id="m-newproj-submit" form="m-newproj-form">Create</button>
+                    <button class="modal__cancel" id="m-newproj-cancel">Cancel</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
